# chimera

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-test.yml
backend/: eel_launcher.py  main.py
backend/core/: computer_use.py  config.py  llm_provider.py  manager.py  mcp_server.py  model_catalog.py  plugin_base.py  settings.py  tools.py
backend/plugins/: README.md  chatgpt.py  claude.py  gemini.py  ollama.py  openai.py  watsonx.py
docs/: CONFIGURATION.md  TESTING.md
examples/: __init__.py  multi_agent_workflow.py  provider_comparison.py  simple_slm_example.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  ChimeraLauncher.jsx
frontend/tests/: ui.spec.ts
scripts/: setup_ollama.sh  test_browser_providers.sh
tests/: README.md  __init__.py  conftest.py  test_browser_providers.py  test_browser_sessions.py  test_chimera.py  test_eel_launcher.py
