[project]
name = "chimera-enterprise-v2"
version = "2.1.0"
description = "Agentic LLM Gateway: Local Models + Browser Agents + Computer Use + Command Center"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "playwright>=1.41.0",
    "playwright-stealth>=2.0.0",
    "python-multipart>=0.0.21",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "colorama>=0.4.6",
    "mcp>=0.9.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.39.0",
    "ibm-watsonx-ai>=0.2.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "ruff>=0.1.0",
    "black>=23.0.0"
]

[project.scripts]
chimera-serve = "backend.main:start"
chimera-test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "tests", "examples"]
